arago.conf: update curl PACKAGECONFIG
curl recently changed PACKAGECONFIG from ssl to openssl, update accordingly.

Signed-off-by: Denys Dmytriyenko <denys@konsulko.com>

--- a/meta-arago-distro/conf/distro/arago.conf
+++ b/meta-arago-distro/conf/distro/arago.conf
@@ -116,7 +116,7 @@ PACKAGECONFIG:append:pn-qtwayland = " examples"
 PACKAGECONFIG:append:pn-qtwebengine = " examples"
 
 # Prefer OpenSSL over GnuTLS for curl due to TSU exemptions
-PACKAGECONFIG:pn-curl = "${@bb.utils.contains("DISTRO_FEATURES", "ipv6", "ipv6", "", d)} ssl zlib"
+PACKAGECONFIG:pn-curl = "${@bb.utils.contains("DISTRO_FEATURES", "ipv6", "ipv6", "", d)} openssl zlib"
 
 PACKAGECONFIG:pn-glmark2 = "drm-gles2 wayland-gles2"
 
