--- a/meta-arago-distro/conf/distro/arago.conf
+++ b/meta-arago-distro/conf/distro/arago.conf
@@ -36,8 +36,29 @@ SDKPATH = "${@"/tmp/"+"x"*96+"/"+"y"*96}"
 #IMAGE_CLASSES += "image_types_md5"
 #IMAGE_FSTYPES += "tar.xz.md5"
 
-# FIT image for secure devices
-KERNEL_CLASSES += "kernel-fitimage"
+# FIT image for legacy secure devices
+KERNEL_CLASSES:append:am335x-hs-evm = " kernel-fitimage-legacyhs"
+KERNEL_CLASSES:append:am437x-hs-evm = " kernel-fitimage-legacyhs"
+KERNEL_CLASSES:append:am57xx-hs-evm = " kernel-fitimage-legacyhs"
+KERNEL_CLASSES:append:dra7xx-hs-evm = " kernel-fitimage-legacyhs"
+
+KERNEL_IMAGETYPES:am335x-hs-evm = "zImage fitImage"
+KERNEL_IMAGETYPES:am437x-hs-evm = "zImage fitImage"
+KERNEL_IMAGETYPES:am57xx-hs-evm = "zImage fitImage"
+KERNEL_IMAGETYPES:dra7xx-hs-evm = "zImage fitImage"
+
+# FIT image for K3 secure devices
+KERNEL_CLASSES:append:am64xx-hs-evm = " kernel-fitimage"
+KERNEL_CLASSES:append:am65xx-hs-evm = " kernel-fitimage"
+KERNEL_CLASSES:append:j7-hs-evm = " kernel-fitimage"
+KERNEL_CLASSES:append:j7200-hs-evm = " kernel-fitimage"
+
+KERNEL_IMAGETYPES:am64xx-hs-evm = "Image fitImage"
+KERNEL_IMAGETYPES:am65xx-hs-evm = "Image fitImage"
+KERNEL_IMAGETYPES:j7-hs-evm = "Image fitImage"
+KERNEL_IMAGETYPES:j7200-hs-evm = "Image fitImage"
+
+# FIT image settings
 FITIMAGE_HASH_ALGO = ""
 FITIMAGE_PACK_TEE = "0"
 FITIMAGE_PACK_TEE:am437x-hs-evm = "1"
@@ -46,15 +67,6 @@ FITIMAGE_PACK_TEE:dra7xx-hs-evm = "1"
 FITIMAGE_DTB_BY_NAME = "1"
 FITIMAGE_TEE_BY_NAME = "1"
 FITIMAGE_CONF_BY_NAME = "1"
-
-KERNEL_IMAGETYPES:dra7xx-hs-evm = "zImage fitImage"
-KERNEL_IMAGETYPES:am57xx-hs-evm = "zImage fitImage"
-KERNEL_IMAGETYPES:am437x-hs-evm = "zImage fitImage"
-KERNEL_IMAGETYPES:am335x-hs-evm = "zImage fitImage"
-KERNEL_IMAGETYPES:am65xx-hs-evm = "Image fitImage"
-KERNEL_IMAGETYPES:am64xx-hs-evm = "Image fitImage"
-KERNEL_IMAGETYPES:j7-hs-evm = "Image fitImage"
-KERNEL_IMAGETYPES:j7200-hs-evm = "Image fitImage"
 
 # Extra boot files for WIC images
 do_image_wic[depends] += "tisdk-uenv:do_deploy"
