arago.conf: drop custom class for image checksums
Use new CONVERSION facility to generate md5sum checksums for images.

Signed-off-by: Denys Dmytriyenko <denys@konsulko.com>

--- a/meta-arago-distro/conf/distro/arago.conf
+++ b/meta-arago-distro/conf/distro/arago.conf
@@ -33,8 +33,7 @@ SDK_NAME = "${SDK_NAME_PREFIX}-${SDK_VERSION}"
 SDKPATH_REAL = "/usr/local/${SDK_NAME_PREFIX}-${SDK_VERSION}"
 SDKPATH = "${@"/tmp/"+"x"*96+"/"+"y"*96}"
 
-#IMAGE_CLASSES += "image_types_md5"
-#IMAGE_FSTYPES += "tar.xz.md5"
+IMAGE_FSTYPES += "tar.xz.md5sum"
 
 # FIT image for legacy secure devices
 KERNEL_CLASSES:append:am335x-hs-evm = " kernel-fitimage-legacyhs"
